# hyperion

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
examples/: bevy_forest.rs
examples/mesh/: config.rs  data.rs  mod.rs  point_renderer.rs  renderer.rs  state.rs
src/: alphabet.rs  context.rs  lib.rs  module.rs  operator.rs  value.rs
src/grammar/: ext.rs  mod.rs  parser.rs  token.rs
src/lsystem/: axiom.rs  builder.rs  lsystem.rs  mod.rs  state.rs
src/rules/: condition.rs  conditional.rs  mod.rs  rule.rs  rules.rs
tests/: algea.rs  binary_tree.rs  contextual.rs  grammar.rs  koch_curve.rs  parameteric.rs  stochastic.rs
