[package]
name = "hyperion"
version = "0.2.1"
edition = "2021"
readme = "README.md"
authors = ["Wendivoid patrickisgreene@gmail.com"]
license = "MIT OR Apache-2.0"
description = "Generic LSystem implementation."
repository = "https://github.com/patrickisgreene/hyperion/"
keywords = ["lsystem", "lsystems", "l-system", "lindenmayer", "grammar"]
categories = ["mathematics", "algorithms"]

[features]
grammar = ["nom"]
default = ["grammar"]

[dependencies]
rand = "0.8.5"
nom = { version = "7.1.3", optional = true }

[dev-dependencies]
bevy = "0.15.0"
bevy_panorbit_camera = "0.21.1"
pretty_assertions = "1.4.0"